signup feature implemented

--- a/src/app/auth/components/login/login.component.css
+++ b/src/app/auth/components/login/login.component.css
@@ -83,5 +83,10 @@
 .example-card
 {
     width: 35%;
-    margin-left: 30%;
+    margin-left: 35%;
+    margin-top: 100px;
+    margin-bottom: 100px;}
+.example-full-width
+{
+    width: 100%;
 }
