--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -1,1 +1,38 @@
-<p>signup works!</p>
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Signup</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form class="example-form">
+        <table class="example-full-width" cellspacing="0">
+          <tr>
+            <td>
+              <mat-form-field class="example-full-width">
+              <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+              </mat-form-field>
+            </td>
+          </tr>
+          <tr>
+          <td><mat-form-field class="example-full-width">
+            <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
+          </mat-form-field></td>
+        </tr>
+        <tr>
+            <td><mat-form-field class="example-full-width">
+              <input matInput placeholder="Confirm Password" [(ngModel)]="confirmPassword" type="password" name="confirmPassword" required>
+            </mat-form-field></td>
+          </tr>
+    </table>
+      </form>
+      <!-- <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner> -->
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button (click)="signup()" color="primary">Signup</button>
+    </mat-card-actions>
+    <!-- <mat-divider></mat-divider>
+    <mat-card-actions>
+        <button  class="btn btn-lg btn-google btn-block text-uppercase btn-outline" (click)="googleLogin()" style=" display: flex; flex-direction: row; justify-content: center; align-items: center; width: 100%;">
+            <img mat-card-image src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png" width="7%" height="30px"> <span style="font-weight: bold;">Sign in Google</span>
+        </button>     
+    </mat-card-actions> -->
+  </mat-card>
