--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -3,32 +3,33 @@
       <mat-card-title>Signup</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form class="example-form">
+      <form class="example-form" [formGroup]="userRegistrationForm" (ngSubmit)="signup(userRegistrationForm.value)">
         <table class="example-full-width" cellspacing="0">
           <tr>
             <td>
               <mat-form-field class="example-full-width">
-              <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+              <input matInput placeholder="Username" formControlName="name" name="username" required>
               </mat-form-field>
             </td>
           </tr>
           <tr>
           <td><mat-form-field class="example-full-width">
-            <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
+            <input matInput placeholder="Password" formControlName="password" type="password" name="password" required>
           </mat-form-field></td>
         </tr>
         <tr>
             <td><mat-form-field class="example-full-width">
-              <input matInput placeholder="Confirm Password" [(ngModel)]="confirmPassword" type="password" name="confirmPassword" required>
+              <input matInput placeholder="Confirm Password" formControlName="confirmPassword" type="password" name="confirmPassword" required>
             </mat-form-field></td>
           </tr>
     </table>
-      </form>
+    <mat-card-actions>
+      <input mat-raised-button  color="primary" type="submit" value="Signup">
+    </mat-card-actions>
+  </form>
+      
       <!-- <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner> -->
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button (click)="signup()" color="primary">Signup</button>
-    </mat-card-actions>
     <!-- <mat-divider></mat-divider>
     <mat-card-actions>
         <button  class="btn btn-lg btn-google btn-block text-uppercase btn-outline" (click)="googleLogin()" style=" display: flex; flex-direction: row; justify-content: center; align-items: center; width: 100%;">
