signup tab connected with db

--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -24,7 +24,7 @@
           </tr>
     </table>
     <mat-card-actions>
-      <input mat-raised-button  color="primary" type="submit" value="Signup">
+      <button mat-raised-button  color="primary" type="submit" value="Signup">Signup</button>
     </mat-card-actions>
   </form>
       
