Google SSO Redirect URL modified

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -5,27 +5,29 @@
     <mat-card-header>
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
+    <form class="example-form" [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
     <mat-card-content>
-      <form class="example-form">
+     
         <table class="example-full-width" cellspacing="0">
           <tr>
             <td>
               <mat-form-field class="example-full-width">
-              <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+              <input matInput placeholder="Username" formControlName="name" name="username" required>
               </mat-form-field>
             </td>
           </tr>
           <tr>
           <td><mat-form-field class="example-full-width">
-            <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
+            <input matInput placeholder="Password" formControlName="password"type="password" name="password" required>
           </mat-form-field></td>
         </tr></table>
-      </form>
+      
       <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button (click)="login()" color="primary">Login</button>
+      <button mat-raised-button type="submit" color="primary">Login</button>
     </mat-card-actions>
+  </form>
     <mat-divider></mat-divider>
     <mat-card-actions>
         <button  class="btn btn-lg btn-google btn-block text-uppercase btn-outline" (click)="googleLogin()" style=" display: flex; flex-direction: row; justify-content: center; align-items: center; width: 100%;">
